# rori-discord-bot

./: .gitignore  Cargo.toml  README.md  Secrets.toml.example
src/: app.rs  commands.rs  llm.rs  main.rs  quotes.rs
src/app/: app_state.rs  bot.rs  mod.rs
