[package]
name = "rori"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.5.5"
shuttle-poise = "0.23.0"
shuttle-serenity = "0.23.0"
shuttle-runtime = "0.23.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice"] }
songbird = "0.3.2"
shuttle-secrets = "0.23.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["serde_json"] }
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["serde_derive", "derive"] }
shuttle-persist = "0.23.0"
llm-wrapper = { git = "https://github.com/UnknownRori/llm-wrapper", version = "0.1.0" }
rand = "0.8.5"
